--- a/research.html
+++ b/research.html
@@ -97,9 +97,9 @@
 
       </div>
 
-      <div class="row" id="projects">
+      <div class="row push-down-4" id="projects">
 
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4 col-sm-offset-0 col-md-offset-0">
            <div class="panel panel-default">
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
