--- a/research.html
+++ b/research.html
@@ -99,7 +99,7 @@
 
       <div class="row push-down-4" id="projects">
 
-        <div class="col-sm-6 col-md-4 col-sm-offset--2 col-md-offset--2">
+        <div class="col-sm-6 col-md-4">
            <div class="panel panel-default">
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
