--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
   <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <meta name="msapplication-square70x70logo" content="favicons/brain_70x70.png" />
+  <meta name="msapplication-square150x150logo" content="favicons/brain_150x150.png" />
+  <meta name="msapplication-wide310x150logo" content="favicons/brain_310x150.png" />
+  <meta name="msapplication-square310x310logo" content="favicons/brain_310x310.png" />
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="favicons/brain.png">
+  <meta name="application-name" content="Surabhi S Nath" />
+  <meta name="msapplication-TileImage" content="favicons/brain_150x150.png">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Bootstrap CSS files-->
