--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <meta name="msapplication-config" content="browserconfig.xml" />
+  <meta name="msapplication-config" content="favicons/browserconfig.xml" />
   <!--
   <meta name="msapplication-square70x70logo" content="favicons/brain_70x70.png" />
   <meta name="msapplication-square150x150logo" content="favicons/brain_150x150.png" />
