--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <link rel="apple-touch-icon" sizes="144x144" href="favicons/brain_144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="favicons/brain_152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/brain_180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="favicons/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="favicons/brain_192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/brain_32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicons/brain_96x96.png">
   <meta name="msapplication-config" content="favicons/browserconfig.xml" />
   <!--
   <meta name="msapplication-square70x70logo" content="favicons/brain_70x70.png" />
@@ -29,7 +29,7 @@
   <meta name="msapplication-square310x310logo" content="favicons/brain_310x310.png" />
   <meta name="msapplication-TileColor" content="#ffffff"> -->
   <meta name="application-name" content="Surabhi S Nath" />
-  <meta name="msapplication-TileImage" content="favicons/brain_150x150.png">
+  <meta name="msapplication-TileImage" content="favicons/brain_152x152.png">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Bootstrap CSS files-->
