--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
   <link rel="icon" type="image/png" sizes="192x192"  href="favicons/brain_192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/brain_32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="favicons/brain_96x96.png">
-  <meta name="msapplication-config" content="favicons/browserconfig.xml" />
-  <!--
+  <!-- <meta name="msapplication-config" content="favicons/browserconfig.xml" /> -->
   <meta name="msapplication-square70x70logo" content="favicons/brain_70x70.png" />
   <meta name="msapplication-square150x150logo" content="favicons/brain_150x150.png" />
   <meta name="msapplication-wide310x150logo" content="favicons/brain_310x150.png" />
   <meta name="msapplication-square310x310logo" content="favicons/brain_310x310.png" />
-  <meta name="msapplication-TileColor" content="#ffffff"> -->
+  <!-- <meta name="msapplication-TileColor" content="#ffffff"> -->
   <meta name="application-name" content="Surabhi S Nath" />
-  <meta name="msapplication-TileImage" content="favicons/brain_152x152.png">
-  <meta name="theme-color" content="#ffffff">
+  <!-- <meta name="msapplication-TileImage" content="favicons/brain_152x152.png"> -->
+  <!-- <meta name="theme-color" content="#ffffff"> -->
 
   <!-- Bootstrap CSS files-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
