--- a/publications.html
+++ b/publications.html
@@ -9,22 +9,27 @@
    <title>Surabhi S Nath</title>
 
    <!-- Favicons -- We recommend this site for generating favicons: https://www.favicon-generator.org/ -->
-   <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
-   <link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-icon-60x60.png">
-   <link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-icon-72x72.png">
-   <link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-icon-76x76.png">
-   <link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-icon-114x114.png">
-   <link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-icon-120x120.png">
-   <link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-icon-144x144.png">
-   <link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-icon-152x152.png">
-   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-icon-180x180.png">
-   <link rel="icon" type="image/png" sizes="192x192"  href="favicons/android-icon-192x192.png">
-   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-   <meta name="msapplication-TileColor" content="#ffffff">
-   <meta name="msapplication-TileImage" content="favicons/brain.png">
-   <meta name="theme-color" content="#ffffff">
+   <link rel="apple-touch-icon" sizes="57x57" href="favicons/brain_57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicons/brain_60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicons/brain_72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicons/brain_76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicons/brain_114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicons/brain_120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicons/brain_144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicons/brain_152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/brain_180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="favicons/brain_192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/brain_32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicons/brain_96x96.png">
+  <!-- <meta name="msapplication-config" content="favicons/browserconfig.xml" /> -->
+  <meta name="msapplication-square70x70logo" content="favicons/brain_70x70.png" />
+  <meta name="msapplication-square150x150logo" content="favicons/brain_150x150.png" />
+  <meta name="msapplication-wide310x150logo" content="favicons/brain_310x150.png" />
+  <meta name="msapplication-square310x310logo" content="favicons/brain_310x310.png" />
+  <!-- <meta name="msapplication-TileColor" content="#ffffff"> -->
+  <meta name="application-name" content="Surabhi S Nath" />
+  <!-- <meta name="msapplication-TileImage" content="favicons/brain_152x152.png"> -->
+  <!-- <meta name="theme-color" content="#ffffff"> -->
 
    <!-- Bootstrap CSS files-->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
