--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
             <ul class="nav navbar-nav navbar-right">
                <li id="projects"><a class="montserrat" href="research.html">Research</a></li>
                <li id="research"><a class="montserrat" href="publications.html">Publications</a></li>
-               <li id="vitae"><a class="montserrat" href="vitae.html">CV</a></li>
+               <li id="vitae"><a class="montserrat" href="CV.html">CV</a></li>
             </ul>
          </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
