--- a/research.html
+++ b/research.html
@@ -96,7 +96,7 @@
       <div class="row">
          <div class="col-sm-12">
             <h1>Research</h1>
-            <p>Below are some of my research projects. Feel free to reach out to me if any of these appeal to you or you have any questions.</p>
+            <p align="justify">Below are some of my research projects. Feel free to reach out to me if any of these appeal to you or you have any questions.</p>
 
          </div>
 
