--- a/research.html
+++ b/research.html
@@ -302,7 +302,39 @@
    <a role="button" id="topper" data-toggle="tooltip" data-placement="top" title="Top" class="btn scroll-link" href="#top"><i class="fa fa-fw fa-2x fa-caret-up" aria-hidden="true"></i></a>
 
    <!-- footer include -->
-   <div w3-include-html="footer.html"></div>
+   <!-- <div w3-include-html="footer.html"></div> -->
+   <style>
+   h6 {
+      display: inline
+   }
+   </style>
+
+   <footer class="footer">
+    <div>
+    <hr>
+    <div class="row">
+      <div class="col-sm-6 text-muted">
+
+        <p>Last updated: August 2020</p>
+        <p><h6>Website template borrowed from</h6> <a href="https://github.com/randal-sean-harrison/academic-website-template" target="_blank"><h6><u>here</u></h6></a>
+
+      </div>
+      <div class="col-sm-6">
+
+        <!-- Social professional networking icons -->
+        <ul class="social-icons pull-right">
+          <li><a href="mailto:surabhi.s.nath@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a></li>
+          <li><a href="https://twitter.com/surabhisnath" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
+          <li><a href="https://github.com/surabhisnath" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
+          <li><a href="https://scholar.google.com/citations?user=NFwaRUcAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/surabhisnath/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+          <li><a href="https://www.researchgate.net/profile/Surabhi_Nath" target="_blank"><i class="fab fa-researchgate fa-2x"></i></a></li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+</footer><!-- jQuery Javascript Library -->
 
    <!-- jQuery -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
