--- a/research.html
+++ b/research.html
@@ -134,7 +134,7 @@
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 4</h5>
                </div> -->
-               <div class="panel-footer", align="center">Universal EEG encoder<br>for learning diverse<br>intelligent tasks</div>
+               <div class="panel-footer", align="center">Universal EEG encoder for learning diverse intelligent tasks</div>
                <div class="panel-body"><img src="img/EEGencoder.png" class="img img-responsive img-thumbnail">
                <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/Universal-EEG-Encoder" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8919317" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>
                </div>
