--- a/footer.html
+++ b/footer.html
@@ -24,7 +24,7 @@
           <li><a href="https://scholar.google.com/citations?user=NFwaRUcAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a></li>
           <li><a href="https://www.linkedin.com/in/surabhisnath/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
           <li><a href="https://www.researchgate.net/profile/Surabhi_Nath" target="_blank"><i class="fab fa-researchgate fa-2x"></i></a></li>
-          <li><a href="https://soundcloud.com/surabhisnath" target="_blank"><i class="fa fa-soundcloud fa-2x"></i></a></li>
+          <li><a href="https://soundcloud.com/surabhisnath" target="_blank"><i class="fab fa-soundcloud fa-2x"></i></a></li>
         </ul>
 
       </div>
