--- a/research.html
+++ b/research.html
@@ -330,6 +330,7 @@
           <li><a href="https://www.linkedin.com/in/surabhisnath/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
           <li><a href="https://www.researchgate.net/profile/Surabhi_Nath" target="_blank"><i class="fab fa-researchgate fa-2x"></i></a></li>
           <li><a href="https://soundcloud.com/surabhisnath" target="_blank"><i class="fab fa-soundcloud fa-2x"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCErhdI7a73pE0OzXXB6sg-Q" target="_blank"><i class="fab fa-youtube-play fa-2x"></i></a></li>
         </ul>
 
       </div>
