--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 
 <body>
-  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=ADiHwFZRRPByqXcR1ddjIVB6Jmi3Z11FB8bflR7C82Y&cl=ffffff&w=a"></script>
+  <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=ADiHwFZRRPByqXcR1ddjIVB6Jmi3Z11FB8bflR7C82Y&cl=ffffff&w=a"></script> -->
   <!-- navbar include -->
   <div w3-include-html="navbar.html"></div>
 
