--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="col-sm-4">
         <img class="center-block img img-responsive img-thumbnail" src="img/surabhisnath.jpg" alt="Surabhi S Nath">
 
-        <p id="title">Incoming Doctoral Student<br>
+        <p id="title">Doctoral Student<br>
           <span id="program">Max Planck School of Cognition</span>
         </p>
         
