--- a/research.html
+++ b/research.html
@@ -162,7 +162,7 @@
                </div> -->
                <div class="panel-footer" align="center">Data sonification for sensitizing youth on crime against women in India</div>
                <div class="panel-body"><img src="img/datasonification.jpg" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/Data-Sonification-Crime-Against-Women-in-Indian-States" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i></div>
+               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/Data-Sonification-Crime-Against-Women-in-Indian-States" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i><label>        </label><a href="https://arxiv.org/pdf/2009.14182.pdf" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>
                </div>
             </div>
          </div>
@@ -315,7 +315,7 @@
     <div class="row">
       <div class="col-sm-6 text-muted">
 
-        <p>Last updated: August 2020</p>
+        <p>Last updated: October 2020</p>
         <p><h6>Website template borrowed from</h6> <a href="https://github.com/randal-sean-harrison/academic-website-template" target="_blank"><h6><u>here</u></h6></a>
 
       </div>
