--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <!-- navbar include -->
   <div w3-include-html="navbar.html"></div>
 
-  <div class="spacer-div-3 hidden-xs hidden-xs"></div>
+  <!-- <div class="spacer-div-3 hidden-xs hidden-xs"></div> -->
 
   <!-- Main content    -->
   <div id="main-container" class="container">
