--- a/index.html
+++ b/index.html
@@ -102,15 +102,18 @@
         <table class="table" id="contact-table">
           <tbody>
             <tr>
+              <td><i class="fas fa-map-marker-alt"></i></td>
+              <td>Berlin, Germany</td>
+            </tr>
+            <tr>
               <td style="width:30px"><i class="fas fa-home"></i></td>
-              <td>
-                New Delhi, India
-              </td>
+              <td>New Delhi, India</td>
             </tr>
             <tr>
               <td><i class="fas fa-at"></i></td>
               <td><a href="mailto:surabhi.s.nath@gmail.com">surabhi.s.nath@gmail.com</a></td>
             </tr>
+            
             <!-- <tr>
               <td><i class="fab fa-skype"></i></td>
               <td><a href="skype:surabhisnath">surabhisnath@hotmail.com</a></td>
