--- a/research.html
+++ b/research.html
@@ -71,6 +71,10 @@
       label {
          white-space: pre;
       }
+      
+      .panel:hover {
+         box-shadow: 3px 3px 10px lightgray;
+      }
        
       a:hover {
          text-decoration: underline;
