--- a/research.html
+++ b/research.html
@@ -109,7 +109,7 @@
       <div class="row push-down-4" id="projects">
 
         <div class="col-sm-6 col-md-4">
-           <div class="panel panel-default">
+           <div class="panel panel-default pointer" data-url="https://google.com">
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
               </div> -->
