--- a/publications.html
+++ b/publications.html
@@ -103,11 +103,11 @@
                -->
             </ul>
 
-            <h3 class="push-down-4"><span>Conferences</span></h3>
+            <h3 class="push-down-4"><span>Conference</span></h3>
             
             <ul class="publications">
 
-               <li align="justify"><b>Nath, S.S.</b>, Udandarao, V. and Shukla, J., 2020. It's LeVAsa not LevioSA! Latent Encodings for Valence-Arousal Structure Alignment. <i>ACM India Joint International Conference on Data Science & Management of Data</i>. (<a href="https://arxiv.org/pdf/2007.10058.pdf">PDF</a>)</li>
+               <li align="justify"><a href="https://www.w3schools.com"><b>Nath, S.S.</b>, Udandarao, V. and Shukla, J., 2020. It's LeVAsa not LevioSA! Latent Encodings for Valence-Arousal Structure Alignment. <i>ACM India Joint International Conference on Data Science & Management of Data</i>.</a></li>
                <li align="justify"><b>Nath, S.S.</b>, Eden, G., Moyers, T.S., Hear her Fear: Data Sonification for Sensitizing Youth on Crime Against Women in India. <i>Indian Conference on Human-Computer Interaction 2020</i>. (<a href="https://arxiv.org/pdf/2009.14182.pdf">PDF</a>)</li>
                <li align="justify"><b>Nath, S.S.</b>, Jolly, B.L.K., Aggrawal, P., Gupta, V., Grover, M.S. and Shah, R.R., 2019, September. Universal EEG Encoder for Learning Diverse Intelligent Tasks. In <i>2019 IEEE Fifth International Conference on Multimedia Big Data (BigMM)</i> (pp. 213-218). IEEE. (<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8919317">PDF</a>)</li>
                <li align="justify"><b>Nath, S.S.</b>, Mukhopadhyay, D. and Miyapuram, K.P., 2019, January. Emotive stimuli-triggered participant-based clustering using a novel split-and-merge algorithm. In <i>Proceedings of the ACM India Joint International Conference on Data Science and Management of Data</i> (pp. 277-280). (<a href="https://dl.acm.org/doi/pdf/10.1145/3297001.3297040">PDF</a>)</li>
