--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,20 @@
 
    <!-- Local styles -->
    <link rel="stylesheet" href="css/main.css">
+   
+   <style>
+      a:link {
+         color: black;
+      }
+      a:hover {
+         colour: blue;
+      }
+      
+      a:visited {
+         color: black;
+      }
+
+   </style>
 
 </head>
 
