--- a/research.html
+++ b/research.html
@@ -115,8 +115,8 @@
               </div> -->
               <div class="panel-footer" align="center">LeVAsa: Latent encodings for Valence-Arousal structure alignment</div>
               <div class="panel-body"><img src="img/LeVAsa.png" class="img img-responsive img-thumbnail">
-              <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://arxiv.org/abs/2007.10058" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>
-              </div>
+              <!-- <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://arxiv.org/abs/2007.10058" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>-->  
+            </div>
            </div>
         </div>
 
