--- a/research.html
+++ b/research.html
@@ -109,7 +109,7 @@
       <div class="row push-down-4" id="projects">
 
         <div class="col-sm-6 col-md-4">
-           <div class="panel panel-default pointer" onclick="window.open('https://github.com/vishaal27/LeVAsa','mywindow');">
+           <div class="panel panel-default" onclick="window.open('https://github.com/vishaal27/LeVAsa','mywindow');">
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
               </div> -->
@@ -134,13 +134,12 @@
 
 
          <div class="col-sm-6 col-md-4">
-            <div class="panel panel-default">
+            <div class="panel panel-default" onclick="window.open('https://github.com/midas-research/universal-eeg-embeddings','mywindow');">
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 4</h5>
                </div> -->
                <div class="panel-footer", align="center">Universal EEG encoder for learning diverse intelligent tasks</div>
                <div class="panel-body"><img src="img/EEGencoder.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/Universal-EEG-Encoder" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8919317" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>
                </div>
                
             </div>
