--- a/research.html
+++ b/research.html
@@ -127,7 +127,6 @@
                </div> -->
                <div class="panel-footer" align="center">RL method for decision making impairement in daily life of people</div>
                <div class="panel-body"><img src="img/RLmodel.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/RL-Method-Decision-Making-Impairment" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></i></div>
                </div>
             </div>
          </div>
@@ -146,13 +145,12 @@
          </div>
 
          <div class="col-sm-6 col-md-4">
-            <div class="panel panel-default">
+            <div class="panel panel-default" onclick="window.open('https://github.com/surabhisnath/BCI-Emotion-Detection','mywindow');">
                <!-- <div class="panel-heading">
                   <h5 class="panel-title">Project 5</h5>
                </div> -->
                <div class="panel-footer">Emotive stimuli-trigerred participant-based clustering on EEG data</div>
                <div class="panel-body"><img src="img/EEGclustering.png" class="img img-responsive img-thumbnail">
-               <div class="panel-footer" align="center"><a href="https://github.com/surabhisnath/BCI-Emotion-Detection" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://dl.acm.org/doi/pdf/10.1145/3297001.3297040" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>
                </div>
                
             </div>
