--- a/research.html
+++ b/research.html
@@ -75,8 +75,13 @@
       .panel:hover {
          box-shadow: 3px 3px 10px lightgray;
       }
+      
+      a {
+      color: black;
+      }
        
       a:hover {
+         color: blue;
          text-decoration: underline;
          text-decoration-style: dashed;
          text-decoration-color: black;
