--- a/research.html
+++ b/research.html
@@ -114,7 +114,7 @@
       <div class="row push-down-4" id="projects">
 
          <div class="col-sm-6 col-md-4">
-           <div class="panel panel-default">
+           <div class="panel panel-default" onclick="window.open("patternexplorer.html",'mywindow');>
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
               </div> -->
