--- a/research.html
+++ b/research.html
@@ -126,7 +126,7 @@
         </div>
          
         <div class="col-sm-6 col-md-4">
-           <div class="panel panel-default">
+           <div class="panel panel-default" onclick="window.open('https://github.com/vishaal27/LeVAsa','mywindow');">
               <div class="panel-footer" align="center">Continuous-space EEG Decoding</div>
               <div class="panel-body"><img src="img/eeg.png" class="img img-responsive img-thumbnail"> 
             </div>
