--- a/research.html
+++ b/research.html
@@ -114,6 +114,7 @@
       <div class="row push-down-4" id="projects">
 
          <div class="col-sm-6 col-md-4">
+           <a href="patternexplorer.html">
            <div class="panel panel-default" onclick="window.open("patternexplorer.html",'mywindow');>
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
@@ -123,10 +124,11 @@
               <!-- <div class="panel-footer" align="center"><a href="https://github.com/vishaal27/LeVAsa" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a><label>        </label><a href="https://arxiv.org/abs/2007.10058" target="_blank"><i class="fa fa-file-pdf-o fa-2x" style="color:black"></i></a></div>-->  
             </div>
            </div>
+           </a>
         </div>
          
         <div class="col-sm-6 col-md-4">
-           <div class="panel panel-default" onclick="window.open('https://github.com/vishaal27/LeVAsa','mywindow');">
+           <div class="panel panel-default" onclick="window.open('https://google.com','mywindow');">
               <div class="panel-footer" align="center">Continuous-space EEG Decoding</div>
               <div class="panel-body"><img src="img/eeg.png" class="img img-responsive img-thumbnail"> 
             </div>
