--- a/research.html
+++ b/research.html
@@ -81,7 +81,7 @@
       }
        
       a:hover {
-         color: blue;
+         color: black;
          text-decoration: underline;
          text-decoration-style: dashed;
          text-decoration-color: black;
@@ -114,8 +114,8 @@
       <div class="row push-down-4" id="projects">
 
          <div class="col-sm-6 col-md-4">
-           <a href="patternexplorer.html">
-           <div class="panel panel-default" onclick="window.open("patternexplorer.html",'mywindow');>
+           <a href="patternexplorer.html" target="_blank">
+           <div class="panel panel-default">
               <!-- <div class="panel-heading">
                  <h5 class="panel-title">LeVAsa</h5>
               </div> -->
