--- a/pattern_explorer.html
+++ b/pattern_explorer.html
@@ -64,8 +64,10 @@
       console.log(toparse);
       var patterns = JSON.parse(toparse);
       console.log(patterns);
-      pattern_count = patterns.length;
+      var pattern_count = patterns.length;
       var patnum = 0;
+      if(pattern_count == 1)
+        document.getElementById("b").innerText = "Done";
 
       function decrypt(encrypted)
       {
