--- a/pattern_setter.html
+++ b/pattern_setter.html
@@ -170,18 +170,29 @@
 
       function get_short_url(long_url)
       {
+          console.log("hi");
+          short_link = "";
           fetch('https://api-ssl.bitly.com/v4/shorten', 
           {
           method: 'POST',
           headers: {
               'Authorization': '0ba35d9befd91b26b5d874d8e5bfae31a725b957',
               'Content-Type': 'application/json'},
-          body: JSON.stringify({ "long_url": long_url, "domain": "bit.ly", "group_guid": "Ba1bc23dE4F" })
-          }
-          );
+          body: JSON.stringify({ "long_url": long_url, "domain": "bit.ly"})
+          })
+          .then(response => response.json())
+          .then(data => {
+            short_link = data["link"];
+          })
+          .catch((error) => {
+            console.error('Error:', error);
+          });
+          console.log("bye");
+          console.log(short_link);
+          return short_link;
       }
 
-      function copyStringToClipboard (str) {
+      function copyStringToClipboard (str) { // copied from https://techoverflow.net/2018/03/30/copying-strings-to-the-clipboard-using-pure-javascript/
          // Create new element
          var el = document.createElement('textarea');
          // Set value (string to be copied)
@@ -198,24 +209,37 @@
          document.body.removeChild(el);
       }
 
-      function createlink() {
+      function createlink() 
+      {
         var shortened = "";
         var json_string = JSON.stringify(patterns);
-        console.log(json_string);
         var encrypted = encrypt(json_string);
         var link = "https://surabhisnath.github.io/pattern_explorer.html?data=" + encrypted;
-        //link = get_short_url(link);
         console.log(link);
-        copyStringToClipboard(link);        
+        try 
+        {
+          shortened = get_short_url(link);
+          if (shortened == "")
+          {
+            console.log("Could not shorten URL, using long URL instead");
+            shortened = link;
+          }
+        }
+        catch (error)
+        {
+          console.log("Could not shorten URL, using long URL instead");
+          shortened = link;
+        }
+        console.log(shortened); // will print on console in case doesn't copy
+        copyStringToClipboard(shortened);
         document.getElementById("l").innerText = "Link Copied";
         document.getElementById("b").disabled = true;
         document.getElementById("l").disabled = true;
-        //window.document.location = link;
+        //window.document.location = shortened;
       }
 
       GenerateCanvas(16, 16);
     </script>
   </body>
 </html>
-<!-- pk_se3Fa4Bzrv3YAUja -->
 <!-- 0ba35d9befd91b26b5d874d8e5bfae31a725b957 -->
