--- a/research.html
+++ b/research.html
@@ -106,7 +106,7 @@
       <div class="row push-down-4" id="projects">
 
          <div class="col-sm-6 col-md-4">
-           <a href="patternexplorer.html" target="_blank">
+           <a href="pattern_settler.html" target="_blank">
            <div class="panel panel-default">
               <div class="panel-footer" align="center">Enjoyment in Grids with Visual Patterns</div>
               <div class="panel-body"><img src="img/pattern.png" class="img img-responsive img-thumbnail">
