--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <tbody>
             <tr>
               <td><i class="fas fa-map-marker-alt"></i></td>
-              <td>Berlin, Germany</td>
+              <td>Tübingen, Germany</td>
             </tr>
             <tr>
               <td style="width:30px"><i class="fas fa-home"></i></td>
