--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@
             October 2021: Joined MPI for Biological Cybernetics, Tübingen<br>
           </li>
           <li align="justify">
-            August 2021: Presented my work on "The Affect Gap in Risky Choice with Positive Affective Outcomes" at SPUDM 2021<br>
+            September 2021: Paper accepted at Journal of Biomedical Informatics<br>
+          </li>
+          <li align="justify">
+            August 2021: Attended and presented at SPUDM 2021<br>
           </li>
           <li align="justify">
             July 2021: Attended CogSci 2021<br>  
