--- a/publications.html
+++ b/publications.html
@@ -107,8 +107,7 @@
             <h3 class="push-down-4"><span>Journal</span></h3>
 
             <ul class="publications">
-               <li align="justify">Jin, H, <b>Nath, S.S.</b>, Schneider, S., Wu, S. and Kaplan, C., 2020. A Reinforcement Learning Based Method to Examine Decision-making Impairment in the Daily Life of People in Their Natural Environment and a Case Study in University Students. <i>Journal of Biomedical Informatics</i> (Under review).</li>
-               <li align="justify"><a href="https://www.sciencedirect.com/science/article/pii/S2666123320301100" target="_blank">Chidambaram, C, <b>Nath, S.S.</b>, Varshney, P. and Kumar, S., 2020. Assessment of Terrace Gardens as Modifiers of Building Microclimate. <i>Energy and Built Environment</i>.</a></li>
+               <li align="justify"> Jin, H., <b>Nath, S. S.</b>, Schneider, S., Junghaenel, D., Wu, S., & Kaplan, C. (2021). An informatics approach to examine decision-making impairments in the daily life of individuals with depression. <i>Journal of Biomedical Informatics</i>, 122, 103913.</li>
                <!--
                <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
                <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
