--- a/publications.html
+++ b/publications.html
@@ -120,6 +120,7 @@
             
             <ul class="publications">
 
+               <li align="justify"><b>Nath, S. S.</b>, & Pachur, T. (2021). The affect gap in risky choice with positive outcomes. <i>Poster presented at "Subjective Probability Utility & Decision Making"</i>, Warwick, UK, 22-24 August 2021.</li>
                <li align="justify"><a href="https://dl.acm.org/doi/abs/10.1145/3430984.3431037" target="_blank"><b>Nath, S.S.</b>, Udandarao, V. and Shukla, J., 2020. It's LeVAsa not LevioSA! Latent Encodings for Valence-Arousal Structure Alignment. <i>ACM India Joint International Conference on Data Science & Management of Data</i>.</a></li>
                <li align="justify"><a href="https://dl.acm.org/doi/abs/10.1145/3429290.3429307" target="_blank"><b>Nath, S.S.</b>, Eden, G., Moyers, T.S., Hear her Fear: Data Sonification for Sensitizing Youth on Crime Against Women in India. <i>Indian Conference on Human-Computer Interaction 2020</i>.</a></li>
                <li align="justify"><a href="https://ieeexplore.ieee.org/abstract/document/8919317" target="_blank"><b>Nath, S.S.</b>, Jolly, B.L.K., Aggrawal, P., Gupta, V., Grover, M.S. and Shah, R.R., 2019, September. Universal EEG Encoder for Learning Diverse Intelligent Tasks. In <i>2019 IEEE Fifth International Conference on Multimedia Big Data (BigMM)</i> (pp. 213-218). IEEE.</a></li>
