--- a/publications.html
+++ b/publications.html
@@ -107,13 +107,7 @@
             <h3 class="push-down-4"><span>Journal</span></h3>
 
             <ul class="publications">
-               <li align="justify"> Jin, H., <b>Nath, S. S.</b>, Schneider, S., Junghaenel, D., Wu, S., & Kaplan, C. (2021). An informatics approach to examine decision-making impairments in the daily life of individuals with depression. <i>Journal of Biomedical Informatics</i>, 122, 103913.</li>
-               <!--
-               <li>LastName, P., & Lastname, Q. (1999). <em>Book title goes here</em> (2nd ed.) City, CA: Publishing House.</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               -->
+               <li align="justify"><a href="https://www.sciencedirect.com/science/article/abs/pii/S1532046421002422">Jin, H., <b>Nath, S. S.</b>, Schneider, S., Junghaenel, D., Wu, S., & Kaplan, C. (2021). An informatics approach to examine decision-making impairments in the daily life of individuals with depression. <i>Journal of Biomedical Informatics</i>, 122, 103913.</a></li>
             </ul>
 
             <h3 class="push-down-4"><span>Conference</span></h3>
