--- a/publications.html
+++ b/publications.html
@@ -107,7 +107,7 @@
             <h3 class="push-down-4"><span>Journal</span></h3>
 
             <ul class="publications">
-               <li align="justify"><a href="https://www.sciencedirect.com/science/article/abs/pii/S1532046421002422">Jin, H., <b>Nath, S. S.</b>, Schneider, S., Junghaenel, D., Wu, S., & Kaplan, C. (2021). An informatics approach to examine decision-making impairments in the daily life of individuals with depression. <i>Journal of Biomedical Informatics</i>, 122, 103913.</a></li>
+               <li align="justify"><a href="https://www.sciencedirect.com/science/article/abs/pii/S1532046421002422" target="_blank">Jin, H., <b>Nath, S. S.</b>, Schneider, S., Junghaenel, D., Wu, S., & Kaplan, C. (2021). An informatics approach to examine decision-making impairments in the daily life of individuals with depression. <i>Journal of Biomedical Informatics</i>, 122, 103913.</a></li>
             </ul>
 
             <h3 class="push-down-4"><span>Conference</span></h3>
@@ -119,26 +119,22 @@
                <li align="justify"><a href="https://dl.acm.org/doi/abs/10.1145/3429290.3429307" target="_blank"><b>Nath, S.S.</b>, Eden, G., Moyers, T.S., Hear her Fear: Data Sonification for Sensitizing Youth on Crime Against Women in India. <i>Indian Conference on Human-Computer Interaction 2020</i>.</a></li>
                <li align="justify"><a href="https://ieeexplore.ieee.org/abstract/document/8919317" target="_blank"><b>Nath, S.S.</b>, Jolly, B.L.K., Aggrawal, P., Gupta, V., Grover, M.S. and Shah, R.R., 2019, September. Universal EEG Encoder for Learning Diverse Intelligent Tasks. In <i>2019 IEEE Fifth International Conference on Multimedia Big Data (BigMM)</i> (pp. 213-218). IEEE.</a></li>
                <li align="justify"><a href="https://dl.acm.org/doi/abs/10.1145/3297001.3297040" target="_blank"><b>Nath, S.S.</b>, Mukhopadhyay, D. and Miyapuram, K.P., 2019, January. Emotive stimuli-triggered participant-based clustering using a novel split-and-merge algorithm. In <i>Proceedings of the ACM India Joint International Conference on Data Science and Management of Data</i> (pp. 277-280).</a></li>
-               
-               <!--
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-               -->
             </ul>
-
+            
             <!-- Dissertation abstract -->
-            <h3 class="push-down-3"><span>B. Tech. Thesis</span></h3>
-            <p><b>Title</b>: Breast Cancer Detection on Mammograms using Deep Neural Networks</p>
-            <p><b>Advisors</b>: <a href="https://www.cse.iitd.ac.in/~chetan/">Prof. Chetan Arora</a>, <a href="http://www.cse.iitd.ernet.in/~suban/">Prof. Subhasis Banerjee</a>, <a href="https://www.linkedin.com/in/krithika-rangarajan-65586039/">Dr. Krithika Rangarajan</a></p>
-
+            <h3 class="push-down-3"><span>Masters Thesis</span></h3>
+            <p><b>Title</b>: Fun meets Aesthetics: Human Curiosity and Creativity in Grids with Visual Patterns</p>
+            <p><b>Advisors</b>: <a href="https://www.mpg.de/12309370/biologische-kybernetik-dayan-peter" target="_blank">Prof. Dr. Peter Dayan</a>, <a href="https://www.kyb.tuebingen.mpg.de/person/58620/2549" target="_blank">Dr. Aenne Brielmann</a></p>
             <!-- Sample quote from the dissertation -->
             <blockquote align="justify">Breast cancer has become the most common form of cancer in Indian, recently having overtaken cervical cancer in urban cities. Immense research has been carried out on breast cancer and several automated machines for detection have been formed, however, they are far from perfection and medical assessments need more reliable services. Also, very little research has been performed on Indian datasets, which are significantly different than the available foreign resources. Indian breasts are more dense and hence differ in texture, lesion size and composition. Our works aims to reproduce the state of the art results reported by researchers using deep learning approaches to automate breast cancer detection and extend them to build deep learning breast cancer detection networks which are more specific to Indian breast types and alongside use metadata of age, breast density, past history and other available information to enable more accurate judgement and treatment. Working in close collaboration with a radiologist from AIIMS Delhi, our work develops alternative object detection frameworks, ensemble and transformer networks to improve and enhance both classification and detection of breast lesions. Various analysis technique have been applied to measure performance and conduct thorough investigation of our experiments.
-               <!--
-               <footer>
-                  Smith, Jane. (2015). <em>Title of Dissertation.</em> (Doctoral dissertation). Retrieved from Some Online Repository. (http://online-repository.com)
-               </footer>
-               -->
+            </blockquote>
+
+            <!-- Dissertation abstract -->
+            <h3 class="push-down-3"><span>B. Tech. Project</span></h3>
+            <p><b>Title</b>: Breast Cancer Detection on Mammograms using Deep Neural Networks</p>
+            <p><b>Advisors</b>: <a href="https://www.cse.iitd.ac.in/~chetan/">Prof. Chetan Arora</a>, <a href="http://www.cse.iitd.ernet.in/~suban/">Prof. Subhasis Banerjee</a>, <a href="https://www.linkedin.com/in/krithika-rangarajan-65586039/">Dr. Krithika Rangarajan</a></p>
+            <!-- Sample quote from the dissertation -->
+            <blockquote align="justify">Breast cancer has become the most common form of cancer in Indian, recently having overtaken cervical cancer in urban cities. Immense research has been carried out on breast cancer and several automated machines for detection have been formed, however, they are far from perfection and medical assessments need more reliable services. Also, very little research has been performed on Indian datasets, which are significantly different than the available foreign resources. Indian breasts are more dense and hence differ in texture, lesion size and composition. Our works aims to reproduce the state of the art results reported by researchers using deep learning approaches to automate breast cancer detection and extend them to build deep learning breast cancer detection networks which are more specific to Indian breast types and alongside use metadata of age, breast density, past history and other available information to enable more accurate judgement and treatment. Working in close collaboration with a radiologist from AIIMS Delhi, our work develops alternative object detection frameworks, ensemble and transformer networks to improve and enhance both classification and detection of breast lesions. Various analysis technique have been applied to measure performance and conduct thorough investigation of our experiments.
             </blockquote>
 
 
