--- a/publications.html
+++ b/publications.html
@@ -121,13 +121,13 @@
                <li align="justify"><a href="https://dl.acm.org/doi/abs/10.1145/3297001.3297040" target="_blank"><b>Nath, S.S.</b>, Mukhopadhyay, D. and Miyapuram, K.P., 2019, January. Emotive stimuli-triggered participant-based clustering using a novel split-and-merge algorithm. In <i>Proceedings of the ACM India Joint International Conference on Data Science and Management of Data</i> (pp. 277-280).</a></li>
             </ul>
             
-            <!-- Dissertation abstract -->
+<!--             <!-- Dissertation abstract -->
             <h3 class="push-down-3"><span>Masters Thesis</span></h3>
             <p><b>Title</b>: Fun meets Aesthetics: Human Curiosity and Creativity in Grids with Visual Patterns</p>
             <p><b>Advisors</b>: <a href="https://www.mpg.de/12309370/biologische-kybernetik-dayan-peter" target="_blank">Prof. Dr. Peter Dayan</a>, <a href="https://www.kyb.tuebingen.mpg.de/person/58620/2549" target="_blank">Dr. Aenne Brielmann</a></p>
             <!-- Sample quote from the dissertation -->
-            <blockquote align="justify">Breast cancer has become the most common form of cancer in Indian, recently having overtaken cervical cancer in urban cities. Immense research has been carried out on breast cancer and several automated machines for detection have been formed, however, they are far from perfection and medical assessments need more reliable services. Also, very little research has been performed on Indian datasets, which are significantly different than the available foreign resources. Indian breasts are more dense and hence differ in texture, lesion size and composition. Our works aims to reproduce the state of the art results reported by researchers using deep learning approaches to automate breast cancer detection and extend them to build deep learning breast cancer detection networks which are more specific to Indian breast types and alongside use metadata of age, breast density, past history and other available information to enable more accurate judgement and treatment. Working in close collaboration with a radiologist from AIIMS Delhi, our work develops alternative object detection frameworks, ensemble and transformer networks to improve and enhance both classification and detection of breast lesions. Various analysis technique have been applied to measure performance and conduct thorough investigation of our experiments.
-            </blockquote>
+            <blockquote align="justify">
+            </blockquote> -->
 
             <!-- Dissertation abstract -->
             <h3 class="push-down-3"><span>B. Tech. Project</span></h3>
