--- a/research.html
+++ b/research.html
@@ -51,13 +51,7 @@
 
    <!-- Local styles -->
    <link rel="stylesheet" href="css/main.css">
-
-   <!--
-   Put this inside style for shadow on hover over project
-   #projects .panel:hover {
-         box-shadow: 3px 3px 10px lightgray;
-      }
-   -->
+   
    <style>
 
       .panel-body {
@@ -73,7 +67,7 @@
       }
       
       .panel:hover {
-         box-shadow: 3px 3px 10px lightgray;
+         box-shadow: none; <!-- 3px 3px 10px lightgray; -->
       }
       
       a {
